Fixed navigation bug. Improved pagination. Improved font readability.

--- a/src/Asm.MooBank.Web/MooBankApp/src/App.scss
+++ b/src/Asm.MooBank.Web/MooBankApp/src/App.scss
@@ -3,6 +3,11 @@
 :root {
     --bs-font-sans-serif: 'Open Sans Condensed', 'Franklin Gothic', Helvetica, Arial, sans-serif;
     --breadcrumb-background: #333;
+    --font-family-alt: 'Open Sans', 'Franklin Gothic', Helvetica, Arial, sans-serif;
+}
+
+label {
+    font-family: var(--font-family-alt);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -55,6 +60,16 @@
 
 .clear {
     clear: both;
+}
+
+.clearable {
+    position: relative;
+
+    svg {
+        position: absolute;
+        right: 1rem;
+        top: calc(1rem - 7px);
+    }
 }
 
 .breadcrumb {
@@ -178,6 +193,7 @@ thead th {
     
 
     tfoot {
+        font-family: var(--font-family-alt);
         /*border-top: 2px double #000;*/
         border-top-style: double;
 
@@ -273,7 +289,7 @@ fieldset {
 
     legend {
         display: block;
-        font-weight: normal;
+        //font-weight: normal;
         font-size: 1.5rem;
         padding: 0 5px;
         margin: 0;
@@ -308,6 +324,33 @@ form>div {
         text-align: left !important;
     }
 
+}
+
+.pagination {
+    font-family: var(--font-family-alt);
+    justify-content: flex-end;
+    --bs-pagination-padding-x: 0.75rem;
+    --bs-pagination-padding-y: 0.375rem;
+    --bs-pagination-font-size: 1rem;
+    --bs-pagination-color: var(--bs-body-color);
+    --bs-pagination-bg: transparent;
+    --bs-pagination-border-width: 1px;
+    --bs-pagination-border-color: #dee2e6;
+    --bs-pagination-hover-color: var(--bs-link-hover-color);
+    --bs-pagination-hover-bg: #e9ecef;
+    --bs-pagination-hover-border-color: #dee2e6;
+    --bs-pagination-focus-color: var(--bs-link-hover-color);
+    --bs-pagination-focus-bg: #e9ecef;
+    --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+    --bs-pagination-active-color: #fff;
+    --bs-pagination-active-bg: #0d6efd;
+    --bs-pagination-active-border-color: #dee2e6;
+    --bs-pagination-disabled-color: #6c757d;
+    --bs-pagination-disabled-bg: transparent;
+    --bs-pagination-disabled-border-color: #dee2e6;
+    display: flex;
+    padding-left: 0;
+    list-style: none;
 }
 
 @import 'responsive';
